docs(report): master cases & AB intuition, initial plots